--- a/build.gradle
+++ b/build.gradle
@@ -2,27 +2,29 @@ plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.31"
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-	compile group: 'org.jetbrains.kotlin', name: 'kotlin-gradle-plugin', version: '1.3.31'
 
-    testCompile group: 'junit', name: 'junit', version: '4.4'
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.5.RELEASE'
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.31'
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-gradle-plugin', version: '1.3.31'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.9'
 
 
+    testCompile group: 'com.h2database', name: 'h2', version: '1.3.148'
 
-    compile group: 'org.springframework.boot', name: 'spring-boot', version: '2.1.5.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.5.RELEASE'
-    compile group: 'org.yaml', name: 'snakeyaml', version: '1.24'
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.+")
+
+    implementation("org.springframework:spring-web:5.+")
+
+    implementation("org.springframework.boot:spring-boot:2.+")
+    implementation("org.springframework.boot:spring-boot-autoconfigure:2.+")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa:2.+")
+    implementation("org.springframework.boot:spring-boot-starter-web:2.+")
+    implementation("org.springframework.boot:spring-boot-devtools:2.+")
 
 
 }
