--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-noarg:1.+"
+    }
+}
+
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.31"
 }
@@ -5,6 +11,9 @@ plugins {
 repositories {
     mavenCentral()
 }
+
+apply plugin: "kotlin-jpa"
+
 
 dependencies {
 
